myweb-ingress-xip.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress-xip
spec:
  rules:
  - host: blue.192.168.99.100.xip.io
    http:
      paths:
      - backend:
          serviceName: blue-service
          servicePort: 80
  - host: green.192.168.99.100.xip.io
    http:
      paths:
      - backend:
          serviceName: green-service
          servicePort: 80
